--- a/src/app/ui/styles.module.css
+++ b/src/app/ui/styles.module.css
@@ -1,9 +1,17 @@
+/* Home page css */
+
+@keyframes fadeIn {
+  0% { opacity: .2; }
+  100% { opacity: 1; }
+}
+
 .bgWrap {
   position: fixed;
   height: 100vh;
   width: 100vw;
   overflow: hidden;
   z-index: -1;
+  animation: fadeIn 4s;
 }
 
 .bgText {
@@ -14,4 +22,5 @@
   padding-top: 15vh;
   color:antiquewhite;
   text-shadow: 1px 1px 1px #3c5c5e;
+  animation: fadeIn 4s;
 }
