--- a/src/app/ui/styles.module.css
+++ b/src/app/ui/styles.module.css
@@ -5,6 +5,17 @@
   100% { opacity: 1; }
 }
 
+@keyframes dropIn {
+  0% {
+    transform: translateY(-30px);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+
 .bgWrap {
   position: fixed;
   height: 100vh;
@@ -23,4 +34,8 @@
   color:antiquewhite;
   text-shadow: 1px 1px 1px #3c5c5e;
   animation: fadeIn 4s;
+}
+
+.aboutDrop {
+  animation: dropIn 2s;
 }
