--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,6 +17,12 @@
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
+  color: white;
   background: black;
+  font-size: 100%;
+}
+
+h1 {
+  font-size: 2.5em;
+  text-align: center;
 }
